kubernetes/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: api
      conference: basta
      location: frankfurt
  template:
    metadata:
      name: api
      namespace: live
      labels:
        component: api
        conference: basta
        location: frankfurt
    spec:
      # init container are really helpful when you have to enforce a chronological order with things like EF Migrations
      # initContainers:
      containers:
      - name: main
        image: basta2022ws.azurecr.io/api:0.0.5
        readinessProbe:
          initialDelaySeconds: 3
          httpGet:
            port: 5000
            path: "/healthz/readiness"
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 20
          httpGet:
            port: 5000
            path: "/healthz/liveness"
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
          - containerPort: 5000
