kubernetes/api/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: api
  namespace: live
  labels:
    component: api
    conference: basta
    location: frankfurt
spec:
  containers:
  - name: main
    image: basta2022ws.azurecr.io/api:0.0.3
    readinessProbe:
      initialDelaySeconds: 3
      httpGet:
        port: 5000
        path: "/healthz/readiness"
    livenessProbe:
      initialDelaySeconds: 15
      periodSeconds: 20
      httpGet:
        port: 5000
        path: "/healthz/liveness"
    resources:
      requests:
        memory: "128Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 5000
