kubernetes/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  # FQDN Scheme: {ServiceName}.{NamespaceName}.svc.cluster.local
spec:
  type: LoadBalancer
  selector:
    component: api
    conference: basta
    location: frankfurt
  ports:
  - port: 8080
    targetPort: 5000
